--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
   "name": "finance-app",
   "version": "1.0.0",
-  "description": "",
+  "description": "A finance tracking app",
   "main": "server.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node server.js",
+    "server": "nodemon server.js"
   },
   "author": "",
   "license": "ISC",
@@ -21,6 +23,10 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/body-parser": "^1.19.2",
+    "@types/express": "^4.17.17",
+    "@types/is-empty": "^1.2.1",
+    "@types/validator": "^13.9.0",
     "nodemon": "^2.0.22"
   }
 }
