--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "concurrently": "^8.0.1",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "is-empty": "^1.2.0",
     "jsonwebtoken": "^9.0.0",
@@ -23,9 +24,11 @@
     "validator": "^13.9.0"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.19.2",
     "@types/express": "^4.17.17",
     "@types/is-empty": "^1.2.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/validator": "^13.9.0",
     "nodemon": "^2.0.22"
   }
