--- a/package.json
+++ b/package.json
@@ -3,10 +3,13 @@
   "version": "1.0.0",
   "description": "A finance tracking app",
   "main": "server.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
+    "client-install": "npm install --prefix client",
     "start": "node server.js",
-    "server": "nodemon server.js"
+    "server": "nodemon server.js",
+    "client": "npm start --prefix client",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
@@ -29,6 +32,7 @@
     "@types/express": "^4.17.17",
     "@types/is-empty": "^1.2.1",
     "@types/jsonwebtoken": "^9.0.2",
+    "@types/passport-jwt": "^3.0.9",
     "@types/validator": "^13.9.0",
     "nodemon": "^2.0.22"
   }
